--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Struttura Discord</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    
+    <!-- HEADER -->
+    <header>
+        <!-- HEADER TOP -->
+        <div class="header-top">
+            <div class="container">
+                <div class="logo">logo</div>
+                <nav>link link link link link</nav>
+                <div class="login">login</div>
+            </div>
+        </div>
+        <!-- /HEADER TOP -->
+        <!-- HEADER BOTTOM -->
+
+        <div class="header-bottom"></div>
+        <!-- /HEADER BOTTOM -->
+    </header>
+    <!-- /HEADER -->
 </body>
+
 </html>
