feat: add header bottom

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
         </div>
         <!-- /HEADER TOP -->
         <!-- HEADER BOTTOM -->
-
-        <div class="header-bottom"></div>
+        <div class="header-bottom">
+            <div class="hero"></div>
+        </div>
         <!-- /HEADER BOTTOM -->
     </header>
     <!-- /HEADER -->
