--- a/index.html
+++ b/index.html
@@ -27,6 +27,20 @@
         <!-- /HEADER BOTTOM -->
     </header>
     <!-- /HEADER -->
+    <!-- MAIN -->
+    <main>
+        <!-- MAIN'S DOUBLE COLUMNS -->
+        <div class="container">
+            <div class="columns">
+                <div class="col-big"></div>
+                <div class="col-small"></div>
+            </div>
+        </div>
+        <!-- /MAIN'S DOUBLE COLUMNS -->
+
+    </main>
+    <!-- /MAIN -->
+
 </body>
 
 </html>
