feat: add second and third main's double columns

--- a/index.html
+++ b/index.html
@@ -30,8 +30,20 @@
     <!-- MAIN -->
     <main>
         <!-- MAIN'S DOUBLE COLUMNS -->
-        <div class="container">
-            <div class="columns">
+        <div class="columns">
+            <div class="container">
+                <div class="col-big"></div>
+                <div class="col-small"></div>
+            </div>
+        </div>
+        <div class="columns-grey-back">
+            <div class="container">
+                <div class="col-small"></div>
+                <div class="col-big"></div>
+            </div>
+        </div>
+        <div class="columns">
+            <div class="container">
                 <div class="col-big"></div>
                 <div class="col-small"></div>
             </div>
