feat: add main's last column

--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
             </div>
         </div>
         <!-- /MAIN'S DOUBLE COLUMNS -->
+        <!-- MAIN'S LAST COLUMN -->
+        <div class="columns-grey-back">
+            <div class="container">
+                <div class="last-col"></div>
+            </div>
+        </div>
+        <!-- /MAIN'S LAST COLUMN -->
+
 
     </main>
     <!-- /MAIN -->
