feat: add footer top

--- a/index.html
+++ b/index.html
@@ -56,10 +56,25 @@
             </div>
         </div>
         <!-- /MAIN'S LAST COLUMN -->
-
-
     </main>
     <!-- /MAIN -->
+    <!-- FOOTER -->
+    <footer>
+        <!-- FOOTER TOP -->
+        <div class="footer-top">
+            <div class="container">
+                <div class="col-pink"></div>
+                <div class="col-aqua"></div>
+                <div class="col-aqua"></div>
+                <div class="col-aqua"></div>
+                <div class="col-aqua"></div>
+            </div>
+        </div>
+        <!-- /FOOTER TOP -->
+
+    </footer>
+    <!-- /FOOTER -->
+
 
 </body>
 
