feat: add footer bottom

--- a/index.html
+++ b/index.html
@@ -71,6 +71,17 @@
             </div>
         </div>
         <!-- /FOOTER TOP -->
+        <!-- FOOTER BOTTOM -->
+        <div class="footer-bottom">
+            <div class="container">
+                <div class="col-lightgreen">
+                    <div class="logo-second">Logo</div>
+                    <div class="button">Bottone</div>
+                </div>
+            </div>
+        </div>
+        <!-- /FOOTER BOTTOM -->
+
 
     </footer>
     <!-- /FOOTER -->
