fix: change tag div in start sections with tag section

--- a/index.html
+++ b/index.html
@@ -30,38 +30,38 @@
     <!-- MAIN -->
     <main>
         <!-- MAIN'S DOUBLE COLUMNS -->
-        <div class="columns">
+        <section class="columns">
             <div class="container">
                 <div class="col-big"></div>
                 <div class="col-small"></div>
             </div>
-        </div>
-        <div class="columns-grey-back">
+        </section>
+        <section class="columns-grey-back">
             <div class="container">
                 <div class="col-small"></div>
                 <div class="col-big"></div>
             </div>
-        </div>
-        <div class="columns">
+        </section>
+        <section class="columns">
             <div class="container">
                 <div class="col-big"></div>
                 <div class="col-small"></div>
             </div>
-        </div>
+        </section>
         <!-- /MAIN'S DOUBLE COLUMNS -->
         <!-- MAIN'S LAST COLUMN -->
-        <div class="columns-grey-back">
+        <section class="columns-grey-back">
             <div class="container">
                 <div class="last-col"></div>
             </div>
-        </div>
+        </section>
         <!-- /MAIN'S LAST COLUMN -->
     </main>
     <!-- /MAIN -->
     <!-- FOOTER -->
     <footer>
         <!-- FOOTER TOP -->
-        <div class="footer-top">
+        <section class="footer-top">
             <div class="container">
                 <div class="col-pink"></div>
                 <div class="col-aqua"></div>
@@ -69,17 +69,17 @@
                 <div class="col-aqua"></div>
                 <div class="col-aqua"></div>
             </div>
-        </div>
+        </section>
         <!-- /FOOTER TOP -->
         <!-- FOOTER BOTTOM -->
-        <div class="footer-bottom">
+        <section class="footer-bottom">
             <div class="container">
                 <div class="col-lightgreen">
                     <div class="logo-second">Logo</div>
                     <div class="button">Bottone</div>
                 </div>
             </div>
-        </div>
+        </section>
         <!-- /FOOTER BOTTOM -->
 
 
